<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sound</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="Dog">Dog</string>
    <string name="Cat">Cat</string>
    <string name="Horse">Horse</string>
    <string name="Mosquito">Add Mosquito</string>
    <string name="Smite">Smite Mosquito</string>
    <string name="Nap">Nap</string>
    <string name="Scream">Scream</string>
    <string name="SoundPool">SoundPool demo - loads, overlays,start,stops sounds.  Ideal for games</string>
    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="wakeup">Wake Up</string>

</resources>